kong/kong-manager-route.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-manager-route
  namespace: kong
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
  - kongmanager.ostack.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kong-kong-manager
      port: 8002
